#AUTOMAKE_OPTIONS=foreign
LDFLAGS = -l pulse
bluezdir = /opt/$(PACKAGE)
bluez_PROGRAMS =
bluez_SCRIPTS = bt_daemon_started_check.sh bt_ftp_folder_nav_check.sh bt_ftp_put_check.sh bt_ftp_folder_add_remove_check.sh bt_ftp_get_check.sh bt_l2cap_ping_check.sh
EXTRA_DIST = $(bluez_SCRIPTS) $(bluez_PROGRAMS)
