#AUTOMAKE_OPTIONS=foreign
LDFLAGS = -l pulse
bluezdir = /opt/$(PACKAGE)
bluez_PROGRAMS =
bluez_SCRIPTS = bt_adapter_get_address.sh bt_adapter_set_pairable_off.sh bt_device_pairing_computer.sh bt_ftp_get_check.sh bt_ftp_stress_put_bigsizefile.sh  bt_package_stack_check.sh bt_adapter_set_discoverable_off.sh bt_adapter_set_pairable_on.sh bt_device_remove_pairing_computer.sh bt_ftp_neg_put_same_file.sh bt_l2cap_ping_check.sh bt_panu_setup_check.sh bt_adapter_set_discoverable_on.sh bt_adapter_set_power.sh bt_device_type_check.sh bt_ftp_put_check.sh bt_opp_send_files.sh bt_pbap_pb_get_check.sh bt_adapter_set_name.sh bt_adapter_set_stress_power_50times.sh bt_ftp_browse_check.sh bt_ftp_remove_check.sh bt_package_daemon_check.sh 
EXTRA_DIST = $(bluez_SCRIPTS) $(bluez_PROGRAMS)
